--- a/style.css
+++ b/style.css
@@ -24,14 +24,15 @@ li a{
   font-style:bold;
   text-decoration:none;
 }
-li button{
-  margin: 2px;
-  padding:0;
+li a input[type=submit]{
+  font-family:"Arial", sans-serif;
+  font-weight:700;
+  margin:0;
+  width:100px;
+  color: white;
+  padding:6px;
   display:inline;
   background:#0266c8;
-}
-button a{
-  color:white;
 }
 li a:hover{
   text-decoration:underline;
@@ -56,25 +57,39 @@ li a:hover{
   margin-right:auto;
 }
 .apps{
-  background-image: url('ssl.gstatic.com/gb/images/i1_1967ca6a.png');
+  background-image:url('https://ssl.gstatic.com/gb/images/i1_1967ca6a.png');
+  background-size: 528px 68px;
   background-position:132px 38px;
-  width:30px; 
+  background:#a9a9a9;
+  opacity:0.6;
+  position:relative;
+  display:inline-block;
+  outline:none;
+  vertical-align:middle;
+  -moz-border-radius:2px;
+  border-radius:2px;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
   height:30px;
-  background-color:#a9a9a9;
+  width:30px;
+  color:#000;
+  cursor: pointer;
+  text-decoration:none;
+
 } /* the search box*/
-input[type=text]{
+form input[type=text]{
   width: 600px;
   padding:15px;
   border:1px solid #a9a9a9;
   border-radius:2px;
   margin-top:29px;
 }
-input[type=text]:hover{
+form input[type=text]:hover{
   -moz-box-shadow:1px 1px 10px #ccc;
   -webkit-box-shadow:1px 1px 10px #ccc;
   box-shadow: 1px 5px 10px #ccc;
 }/* the search buttons*/
-input[type=submit]{
+form input[type=submit]{
   color:#797979;
   background:#f2f2f2;
   width:150px;
@@ -87,7 +102,7 @@ input[type=submit]{
   position:relative;
   border:1px solid white;
 }
-input[type=submit]:hover{
+form input[type=submit]:hover{
  /*color:#0c0c0c;*/
   color:#161616;
   border-color:gray;
@@ -97,4 +112,22 @@ input[type=submit]:hover{
   background:-moz-linear-gradient(bottom,rgba(242,242,242,0),rgba(242,242,242,1));
   background:linear-gradient(to bottom,rgba(242,242,242,0),rgba(242,242,242,1));
   border:1px solid #a9a9a9;
+}
+
+/* footer */
+footer{
+  margin:auto;
+  padding:2px;
+  position:absolute;
+  bottom:0;
+  width:99%;
+  height:40px;
+  background:#f2f2f2;
+  overflow:hidden;
+}
+footer li:not(:nth-child(n+4)){
+  float:left;
+}
+footer li{
+  float:right;
 }
